# baosa

./: .gitignore  MAINTENANCE.md  README.md  pyproject.toml
balsa/: active_learning.py  obj_func.py  surrogate.py  utils.py
balsa/search_methods/: __init__.py  _bo.py  _lamcts.py  _saasbo.py  _turbo.py  algorithms.py  base.py  doo.py  soo.py  voo.py
balsa/vlab/: peptide.py  ptycho.py
docs/tutorials/: 01_creating_custom_functions.md  02_function_configuration.md  tutorial_creating_custom_functions.ipynb
scripts/: run.py  run_peptide.py  run_ptycho.py
scripts/conf/: run.yaml  run_peptide.yaml  run_ptycho.yaml
tests/: test_active_learning.py  test_obj_func.py  test_search_methods.py  test_surrogate.py  test_utils.py
